--- a/src/ui/mainmenu/connectionstatus/NewsButton.css
+++ b/src/ui/mainmenu/connectionstatus/NewsButton.css
@@ -14,6 +14,6 @@
     padding-right: 0.2rem;
 }
 
-#connection-status .news-button.connection-button.active {
+.connection-status .news-button.connection-button.active {
     cursor: pointer;
 }
