--- a/src/ui/mainmenu/connectionstatus/HomeButton.css
+++ b/src/ui/mainmenu/connectionstatus/HomeButton.css
@@ -1,3 +1,3 @@
-#connection-status .home-button.connection-button.active {
+.connection-status .home-button.connection-button.active {
     cursor: pointer;
 }
