Display full name, gender and title in the node card.

--- a/src/ui/nodename/NodeCard.css
+++ b/src/ui/nodename/NodeCard.css
@@ -3,8 +3,19 @@
     font-size: 150%;
 }
 
+.node-card .gender {
+    font-style: italic;
+    margin-left: .5em;
+}
+
 .node-card .name {
     color: var(--gray);
+    margin-top: -.2em;
+}
+
+.node-card .title {
+    font-size: larger;
+    margin-top: .2em;
 }
 
 .node-card .people {
