--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -33,13 +33,13 @@
     overflow-y: auto;
 }
 
-@media only screen and (max-width: var(--feed-width)) {
+@media only screen and (max-width: 575px) {
     .comment .content.preview {
         max-height: 150vh;
     }
 }
 
-@media only screen and (min-width: var(--feed-width)) {
+@media only screen and (min-width: 576px) {
     .comment .content.preview {
         max-height: 100vh;
     }
