Do not show error message when hovering a mention of an unknown name. Show "Unknown name" card instead.

--- a/src/ui/nodename/NodeCard.css
+++ b/src/ui/nodename/NodeCard.css
@@ -2,6 +2,11 @@
     min-width: 16rem;
 }
 
+.node-card .unknown {
+    font-style: italic;
+    color: var(--gray);
+}
+
 .node-card .full-name {
     font-weight: bold;
     font-size: 150%;
