Blue color of the posting owner link should not affect the color of links in the node card.

--- a/src/ui/posting/PostingOwner.css
+++ b/src/ui/posting/PostingOwner.css
@@ -11,6 +11,6 @@
     color: var(--gray-medium);
 }
 
-.posting > .owner-line .owner A {
+.posting > .owner-line .owner > A {
     color: var(--node-name);
 }
