--- a/src/ui/instant/Instants.css
+++ b/src/ui/instant/Instants.css
@@ -2,6 +2,14 @@
     min-width: 25rem;
 }
 
+@media only screen and (max-width: 575px) {
+    .instant-popover {
+        box-shadow: 0 -4px 5px 0 rgba(0, 0, 0, .14),
+                    0 -1px 10px 0 rgba(0, 0, 0, .12),
+                    0 -2px 4px -1px rgba(0, 0, 0, .2)
+    }
+}
+
 #instants {
     font-size: .835rem;
     margin-left: -.75rem;
