Setting changing node name display mode (name only, full name only or both) in the menu and posting/comment owner.

--- a/src/ui/mainmenu/owner/OwnerName.css
+++ b/src/ui/mainmenu/owner/OwnerName.css
@@ -27,3 +27,7 @@
 #owner-name .node-name.incorrect {
     color: var(--incorrect-light);
 }
+
+#owner-name .node-name .mention {
+    color: var(--gray-light);
+}
