--- a/src/ui/feed/FeedPage.css
+++ b/src/ui/feed/FeedPage.css
@@ -5,7 +5,7 @@
     margin-top: 5rem;
 }
 
-@media only screen and (max-width: 575px) {
+@media only screen and (min-width: 576px) {
     .no-postings {
         text-align: center;
     }
