--- a/src/ui/posting/PostingButton.css
+++ b/src/ui/posting/PostingButton.css
@@ -22,3 +22,9 @@
     font-size: 1rem;
     user-select: none;
 }
+
+@media only screen and (max-width: 575px) {
+    .posting-button .caption {
+        display: none;
+    }
+}
