--- a/src/ui/control/Avatar.css
+++ b/src/ui/control/Avatar.css
@@ -1,4 +1,11 @@
 .avatar {
-    border: 1px solid var(--white-dark);
+    border: 1px solid rgba(0, 0, 0, .1);
+}
+
+.avatar-circle {
     border-radius: 50%;
+}
+
+.avatar-square {
+    border-radius: 10px;
 }
