--- a/src/ui/profile/edit/AvatarEditDialog.css
+++ b/src/ui/profile/edit/AvatarEditDialog.css
@@ -12,7 +12,7 @@
     margin-top: .25rem;
 }
 
-.avatar-edit-dialog .custom-range {
+.avatar-edit-dialog .form-control-range {
     margin-top: 1rem;
 }
 
