Avatar rotation buttons.

--- a/src/ui/profile/edit/AvatarEditDialog.css
+++ b/src/ui/profile/edit/AvatarEditDialog.css
@@ -4,6 +4,11 @@
     align-items: center;
 }
 
+.avatar-edit-dialog .tools {
+    display: flex;
+    justify-content: space-between;
+}
+
 .avatar-edit-dialog .editor {
     border: dotted 1px var(--gray-light);
 }
