Avatar shape buttons.

--- a/src/ui/profile/edit/AvatarEditDialog.css
+++ b/src/ui/profile/edit/AvatarEditDialog.css
@@ -7,6 +7,7 @@
 .avatar-edit-dialog .tools {
     display: flex;
     justify-content: space-between;
+    width: 300px;
 }
 
 .avatar-edit-dialog .editor {
