Extract useButtonPopper() hook for creating popdowns activated by clicking a button and hiddden by clicking any place in the document.

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -1,10 +1,16 @@
 HTML {
     font-size: 90%;
+    height: 100%;
 }
 
 BODY {
     background-color: var(--body-background);
     padding-bottom: 2rem;
+    height: 100%;
+}
+
+#app-root {
+    height: 100%;
 }
 
 ABBR[title] {
