Dropdown avatar selector.

--- a/src/ui/control/DropdownMenu.css
+++ b/src/ui/control/DropdownMenu.css
@@ -5,3 +5,27 @@
 .dropdown-menu.show {
     pointer-events: auto;
 }
+
+.dropdown-menu[data-popper-placement^=top] > .arrow {
+    bottom: -4px;
+}
+
+.dropdown-menu[data-popper-placement^=bottom] > .arrow {
+    top: -4px;
+}
+
+.dropdown-menu[data-popper-placement^=left] > .arrow {
+    right: -4px;
+}
+
+.dropdown-menu[data-popper-placement^=right] > .arrow {
+    left: -4px;
+}
+
+.dropdown-menu .arrow {
+    width: 8px;
+    height: 8px;
+    border-left: 1px solid rgba(0, 0, 0, .15);
+    border-top: 1px solid rgba(0, 0, 0, .15);
+    background-color: white;
+}
