Use "popover" class instead of "dropdown-menu" class everywhere except dropdown menus.

--- a/src/ui/profile/edit/AvatarSelector.css
+++ b/src/ui/profile/edit/AvatarSelector.css
@@ -1,6 +1,5 @@
 .avatar-selector {
-    margin-right: .25rem;
-    margin-left: .15rem;
+    margin: .15rem;
     display: flex;
     flex-wrap: wrap;
     cursor: auto;
