--- a/src/ui/profile/edit/AvatarSelector.css
+++ b/src/ui/profile/edit/AvatarSelector.css
@@ -25,6 +25,7 @@
     padding: .25rem;
     cursor: pointer;
     border-radius: 10px;
+    position: relative;
 }
 
 .avatar-selector .item.active, .avatar-selector .item.active:hover {
@@ -34,6 +35,19 @@
 
 .avatar-selector .item:hover {
     background-color: var(--highlight);
+}
+
+.avatar-selector .item .delete {
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: var(--danger);
+    background-color: white;
+    border-radius: 50%;
+    font-size: 1.5em;
+    height: 1em;
+    width: 1em;
+    line-height: 1;
 }
 
 .avatar-selector .create {
