Rise message/confirmation boxes above popups and disable hiding popups by click when they are shown.

--- a/src/ui/control/ModalDialog.css
+++ b/src/ui/control/ModalDialog.css
@@ -1,5 +1,13 @@
+.modal-backdrop.risen {
+    z-index: 1080;
+}
+
 .modal {
     display: block;
+}
+
+.modal.risen {
+    z-index: 1090;
 }
 
 .modal-children {
