Link avatars to user's profile.

--- a/src/ui/feed/FeedTitle.css
+++ b/src/ui/feed/FeedTitle.css
@@ -10,7 +10,7 @@
     display: flex;
 }
 
-#feed-title .panel .avatar {
+#feed-title .panel .avatar-link {
     flex: none;
     margin-right: .5rem;
 }
