--- a/src/ui/compose/ComposePage.css
+++ b/src/ui/compose/ComposePage.css
@@ -16,7 +16,7 @@
     margin-top: -.25rem;
 }
 
-.composer .input-resettable INPUT, .composer .input-resettable BUTTON {
+.composer .input-resettable > INPUT, .composer .input-resettable > BUTTON, .composer .input-resettable > .rw-widget {
     display: inline-block;
 }
 
@@ -33,7 +33,8 @@
 .composer .text-editable {
     border: transparent .1rem solid;
     border-radius: .25rem;
-    padding: .25rem .5rem;
+    padding: .1rem .5rem;
+    line-height: 1.2;
     width: max-content;
     cursor: text;
 }
@@ -42,9 +43,13 @@
     border-color: var(--gray-light);
 }
 
+.composer .text-editable.disabled:hover {
+    border-color: transparent;
+}
+
 .composer .body {
     flex: auto;
-    margin-left: .5rem;
+    margin-left: .25rem;
 }
 
 .composer .body .publish-at {
