--- a/src/ui/profile/edit/AvatarSelector.css
+++ b/src/ui/profile/edit/AvatarSelector.css
@@ -2,7 +2,7 @@
     margin: .15rem;
     display: flex;
     flex-wrap: wrap;
-    cursor: auto;
+    cursor: default;
     width: max-content;
     max-height: calc(312px + .75rem);
     overflow-y: auto;
@@ -29,13 +29,13 @@
     position: relative;
 }
 
-.avatar-selector .item.active, .avatar-selector .item.active:hover {
-    background-color: var(--cyan);
-    cursor: auto;
-}
-
 .avatar-selector .item:hover {
     background-color: var(--highlight);
+}
+
+.avatar-selector .item.active, .avatar-selector .item.active:hover {
+    background-color: var(--cyan);
+    cursor: default;
 }
 
 .avatar-selector .item .delete {
@@ -43,12 +43,11 @@
     right: 0;
     top: 0;
     color: var(--danger);
-    background-color: white;
-    border-radius: 50%;
     font-size: 1.5em;
     height: 1em;
     width: 1em;
     line-height: 1;
+    cursor: pointer;
 }
 
 .avatar-selector .create {
