--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -2,17 +2,14 @@
     position: relative;
     margin-bottom: .6rem;
     width: max-content;
-    max-width: calc(100% - 2rem);
+    max-width: 100%;
     display: flex;
 }
 
 .comment .details {
     flex: auto;
     margin-left: .25rem;
-}
-
-.comment .owner-line {
-    padding-right: 1.7rem;
+    max-width: calc(100% - .25rem - 36px);
 }
 
 .comment .content {
