--- a/src/ui/control/field/AvatarField.css
+++ b/src/ui/control/field/AvatarField.css
@@ -24,6 +24,10 @@
     display: none;
 }
 
+.avatar-field .popover {
+    z-index: 1100;
+}
+
 .avatar-field .selector {
     margin: .15rem;
     display: flex;
