--- a/src/ui/instant/InstantStory.css
+++ b/src/ui/instant/InstantStory.css
@@ -1,50 +1,56 @@
-#instants .instant A {
-    color: black;
-    text-decoration: none;
-}
-
 #instants .instant {
-    display: block;
+    display: grid;
+    grid-template: auto min-content / calc(40px + .25rem) auto 1.5em;
     border-bottom: 1px solid var(--gray-ultralight);
     overflow-wrap: anywhere;
+    padding: .2rem .5rem;
+    min-height: 5em;
 }
 
 #instants .instant.unread {
     background-color: var(--highlight-cyan);
 }
 
+#instants .instant:hover, #instants .instant.unread:hover {
+    background-color: var(--highlight);
+}
+
 #instants .instant.last-new {
     border-bottom: 1px solid var(--green);
 }
 
-#instants .instant .cursor {
-    display: flex;
-    align-items: center;
-    padding: 0.2rem 0.5rem;
-    min-height: 5.5em;
-}
-
-#instants .instant .cursor:hover {
-    background-color: var(--highlight);
-}
-
 #instants .instant A {
     display: block;
-    flex: auto;
+    color: black;
+    text-decoration: none;
 }
 
-#instants .instant A .footer {
-    margin-top: 0.3em;
+#instants .instant .summary-avatar {
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
 }
 
-#instants .instant A .footer .date {
+#instants .instant .summary {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+}
+
+#instants .instant .footer {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    margin-top: .3em;
+}
+
+#instants .instant .footer .date {
     color: var(--gray-medium);
-    margin-left: 0.5em;
+    margin-left: .5em;
 }
 
 #instants .instant .sidebar {
-    flex: none;
-    padding: 0.5em;
+    grid-row: 1 / 3;
+    grid-column: 3 / 4;
+    place-self: center;
+    padding: .5em;
     color: var(--cyan);
     visibility: hidden;
 }
