Additional margin at the bottom of the composer on mobile to make space for bottom menu that does not overlap buttons.

--- a/src/ui/compose/ComposePage.css
+++ b/src/ui/compose/ComposePage.css
@@ -7,6 +7,12 @@
     padding: 1rem;
 }
 
+@media only screen and (max-width: 991px) {
+    .composer {
+        margin-bottom: 5rem;
+    }
+}
+
 .composer .info {
     display: flex;
     margin-bottom: .5rem;
