--- a/src/ui/comment/CommentComposeButtons.css
+++ b/src/ui/comment/CommentComposeButtons.css
@@ -6,3 +6,8 @@
     margin-left: .5rem;
     margin-right: 1rem;
 }
+
+#comment-composer .buttons .draft-saver {
+    display: inline-block;
+    color: var(--gray-medium);
+}
