Saving/loading draft when editing a comment.

--- a/src/ui/comment/CommentDialog.css
+++ b/src/ui/comment/CommentDialog.css
@@ -10,3 +10,7 @@
     display: inline-block;
     margin-right: .25rem;
 }
+
+.comment-dialog .modal-footer .draft-saver {
+    color: var(--gray-medium);
+}
