--- a/src/ui/mainmenu/connectionstatus/NewsButton.css
+++ b/src/ui/mainmenu/connectionstatus/NewsButton.css
@@ -4,14 +4,14 @@
 
 .news-button .count {
     position: absolute;
-    top: -0.2rem;
+    top: -.2rem;
     right: 0;
     background-color: var(--primary);
     color: white;
     font-weight: bold;
-    font-size: 0.7rem;
-    padding-left: 0.2rem;
-    padding-right: 0.2rem;
+    font-size: .7rem;
+    padding-left: .2rem;
+    padding-right: .2rem;
 }
 
 .connection-status .news-button.connection-button.active {
