Make possible to edit the description of a shared link before sharing. Use a selected text on the page as a description for sharing.

--- a/src/ui/sharedialog/ShareDialog.css
+++ b/src/ui/sharedialog/ShareDialog.css
@@ -1,6 +1,6 @@
 .share-dialog .title {
-    font-style: italic;
-    margin-bottom: 1em;
+    margin-top: .5em;
+    margin-bottom: .5em;
 }
 
 .share-dialog .link {
