Use <button> instead of <div> for dropdown menu button. In this case a selection on the page is not cleared when the button is clicked.

--- a/src/ui/posting/EntryMenu.css
+++ b/src/ui/posting/EntryMenu.css
@@ -2,6 +2,8 @@
     position: absolute;
     top: 0.2rem;
     right: 0.4rem;
+    background-color: transparent;
+    border: 0;
 }
 
 .entry .menu .chevron {
