Do not paint unfocused comment composer in cyan, if it has a content.

--- a/src/ui/comment/CommentCompose.css
+++ b/src/ui/comment/CommentCompose.css
@@ -15,7 +15,7 @@
     margin-bottom: 0;
 }
 
-#comment-composer TEXTAREA {
+#comment-composer TEXTAREA:empty {
     background-color: var(--comment-compose);
 }
 
