Display attached images in posts. Do not stretch images with width/height attributes set in posts and comments.

--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -48,6 +48,11 @@
     }
 }
 
+.comment > .content IMG {
+    width: auto;
+    height: auto;
+}
+
 .comment .content IMG, .comment .content IFRAME {
     max-width: min(100vw - 7rem, var(--feed-width) - 6.5rem);
     max-height: 16rem;
