--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -45,6 +45,11 @@
     }
 }
 
+.posting > .content IMG {
+    width: auto;
+    height: auto;
+}
+
 .posting > .content IMG, .posting > .content IFRAME {
     max-width: min(100vw - 4rem, var(--feed-width) - 3.5rem);
 }
